=== master

* Support Dataset#with :materialized option on PostgreSQL 12 for [NOT] MATERIALIZED (jeremyevans)

* Make Database#primary_key_sequence work on tables without serial sequences on PostgreSQL 12 (jeremyevans)

* Support ruby 2.7+ startless ranges in the pg_range extension (jeremyevans)

* Support ruby 2.7+ startless, endless ranges in filters, using an always tree condition for them (jeremyevans)

* Support ruby 2.7+ startless ranges in filters, using just a <= or < operator for them (jeremyevans)

=== 5.21.0 (2019-06-01)

* Recognize additional DatabaseLockTimeout errors in mysql and mysql2 adapters (jeremyevans)

* Disallow eager_graph of ancestors and descendants associations when using the rcte_tree plugin (jeremyevans)

* Make jdbc/mysql adapter work when using JRuby with Java 11 (jeremyevans)

* Support window function options :window, :exclude, and :frame :type=>:groups, :start, and :end on SQLite 3.28.0+ (jeremyevans)

* Make the server_block extension respect the :servers_hash Database option (jeremyevans)

* Typecast string input for json/jsonb types as JSON strings instead of parsing as JSON in the pg_json extension when Database#typecast_json_strings is set to true (jeremyevans)

* Wrap JSON primitives (string, number, true, false, nil) in the pg_json extension when Database#wrap_json_primitives is set to true (jeremyevans)

* Convert the Database :timeout option to an integer in the sqlite adapter (jeremyevans) (#1620)

* Improve performance in ado adapter using more efficient inner loop (jeremyevans)

* Improve performance in ado adapter using faster callables for type conversion (jeremyevans)

* Fix handling of decimal values in the ado adapter when using locales where the decimal separator is , and not . (jeremyevans) (#1619)

=== 5.20.0 (2019-05-01)

* Fix reversing of alter_table add_foreign_key when :type option is used (jeremyevans) (#1615)
